32 paskaita - Table and Universal data

--- a/JavaScript/32 paskaita - 03.29 - Moduliai ir Komponentai/index.html
+++ b/JavaScript/32 paskaita - 03.29 - Moduliai ir Komponentai/index.html
@@ -52,6 +52,27 @@
         <li class="liKlase">Kažkelintas</li>
         <li class="liKlase">Paskutinis maybe</li>
       </ol> -->
+      <table>
+        <thead>
+          <tr>
+            <th>Vardas</th>
+            <th>Pavardė</th>
+            <th>Amžius</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Rokas</td>
+            <td>Banaitis</td>
+            <td>26</td>
+          </tr>
+          <tr>
+            <td>Petras</td>
+            <td>Petrauskas</td>
+            <td>55</td>
+          </tr>
+        </tbody>
+      </table>
     </section>
   </main>
 </body>
